--- a/ASPLOS2023/abstract.tex
+++ b/ASPLOS2023/abstract.tex
@@ -1,6 +1,7 @@
 The NUMA architecture accommodates the hardware trend of an increasing number of CPU cores. It requires the cooperation of memory allocators to achieve good performance for multithreaded applications. Unfortunately, existing allocators do not support NUMA architecture well.
 % \todo{Unfortunately, none of the existing allocators can support NUMA architecture well}.
-This paper presents a novel memory allocator -- \NM{}, that is designed for the NUMA architecture. \NM{} is centered on a binding-based memory management. On top of it, \NM{} proposes an ``origin-aware memory management'' to ensure the locality of memory allocations and deallocations, as well as a method called ``incremental sharing'' to balance the performance benefits and memory overhead of using transparent huge pages.
+This paper presents a novel memory allocator -- \NM{}, that is designed for the NUMA architecture. \NM{} is centered on a binding-based memory management. On top of it, \NM{} proposes an ``origin-aware memory management'' to ensure the locality of memory allocations and deallocations, as well as a method called ``incremental sharing'' to reduce fragmentation overheads.
+% balance the performance benefits and memory overhead of using transparent huge pages.
 % On top of it, \NM{} proposes a method called ``incremental sharing'' to balance the performance benefits and memory overhead of using transparent huge pages, as well as an ``origin-aware memory management'' to ensure the locality of memory allocations and deallocations. 
 % It further introduced an interleaved heap to reduce the load imbalance among different nodes and an efficient mechanism for object movement.
 % It further introduced origin-aware memory management to ensure the locality of memory allocations and an interleaved heap to reduce the load imbalance among different nodes. 
