--- a/ASPLOS2023/evaluation.tex
+++ b/ASPLOS2023/evaluation.tex
@@ -88,7 +88,7 @@ Compiler & GCC-7.5.0 & GCC-8.3.0 \\ \hline
 
 %The number of threads of all benchmarks were adjusted according how many cores and nodes in the target machine to make threads could be properly distributed over the nodes and cores, making the number of threads as close as the number of cores. Mostly, thread number was 40 in the Machine A and 128 in the Machine B, and I will give the specific number below if it is not this default value. 
 
-Fig.~\ref{fig:perf1} and Fig.~\ref{fig:perf2} show the performance of normal applications and HPC applications with different allocators, repectively. The runtime of each allocator is normalized to that of Linux's default one. 
+Figure~\ref{fig:perf1} and Figure~\ref{fig:perf2} show the performance of normal applications and HPC applications with different allocators, repectively. The runtime of each allocator is normalized to that of Linux's default one. 
 % \NM{} is configured without the interleaved heap support for most applications, except for \texttt{fluidanimate} and \texttt{streamcluster}. As evaluated in Section~\ref{sec:interleavedheap}, the interleaved heap will significantly improve the performance for these two applications. 
 % \todo{Let's remove the interleaved heap support from everywhere}
 %As further discussed in Section~\ref{sec:interleavedheap}, the interleaved heap may have a harmful performance impact for the serial phases, as it turns some local accesses to remote ones. %Therefore, the data of \texttt{canneal} and \texttt{raytrace} are collected without the interleaved heap. 
@@ -122,18 +122,18 @@ On average, \NM{} is 18.4\%, 18.2\%, and 20.7\% faster than TCMalloc~\cite{tcmal
 %But TCMalloc-NUMA's performance is even worse than that of TCMalloc. Based on our understanding, TCMalloc-NUMA is based on TCMalloc-0.97 (released in 2008), which does not have new features of TCMalloc-2.7 (the version for our evaluation). 
 % mimalloc only has the very basic NUMA support, which is the reason why it is not performing as well as \NM{}. TCMalloc and TBB are allocators that are claimed to support the NUMA architecture~\cite{tcmalloc2, tbb3}, but \NM{} is \todo{21\%} faster than both of them.
 
-As shown in Fig.~\ref{fig:perf1}, \NM{} has a significant performance improvement (over 25\%) in the following applications, including \texttt{dedup}, \texttt{fluidanimate}, \texttt{pbzip2}, \texttt{streamcluster}, and \texttt{swaptions}. For these applications, we further examine the number of remote accesses and TLB misses to confirm whether \NM{} significantly reduces them. 
+As shown in Figure~\ref{fig:perf1}, \NM{} has a significant performance improvement (over 25\%) in the following applications, including \texttt{dedup}, \texttt{fluidanimate}, \texttt{pbzip2}, \texttt{streamcluster}, and \texttt{swaptions}. For these applications, we further examine the number of remote accesses and TLB misses to confirm whether \NM{} significantly reduces them. 
 % By ensuring the full locality of memory accesses, \NM{} is expected to reduce the number of remote accesses. \NM{} will reduce the TLB misses, since it takes the advantage of transparent huge pages.  
 We utilize the \texttt{perf}~\cite{perfweb} (version 4.19), a Linux performance profiling tool, to collect these numbers. 
 % Figure~\ref{fig:perf} shows that \NM{} has a similar or better performance than the default allocator in almost all applications. Further, it has a significant performance improvement (over 20\%) in the following applications, including \texttt{canneal}, \texttt{dedup}, \texttt{fluidanimate}, \texttt{streamcluster}, and \texttt{pbzip2}. Among them, \NM{} has a better performance for \texttt{fluidanimate}, due to the following reasons. First, the interleaved heap contributes to $3.23\times$ performance speedup, as shown in Figure~\ref{fig:interleavedheap}. Second, node-balanced thread binding improves the performance by over $4\times$. 
 % \textbf{Confirming the number of remote accesses:} We further examine the number of remote accesses to confirm whether \NM{} significantly reduces them due to its design. We utilize the \texttt{perf} to collect the number of remote accesses (both load and store) on these applications when they are running with all allocators. 
 %In our machine, we can collect these numbers using the following command: \texttt{perf stat -e node-load-misses,node-store-misses,dTLB-store-misses,dTLB-load-misses} 
-The results are shown in Fig.~\ref{fig:remoteAccess}, which includes the performance (shown as bars), remote accesses (red lines), and TLB misses (blue lines) together for a better comparison. 
+The results are shown in Figure~\ref{fig:remoteAccess}, which includes the performance (shown as bars), remote accesses (red lines), and TLB misses (blue lines) together for a better comparison. 
 % For all these data, the lower is better. 
 Overall, \NM{} has either a lower number of remote accesses or TLB misses than other allocators, which explains why \NM{} is the fastest on these applications. We also notice that both \NM{} and TCMalloc have a lower number of TLB misses, as they have the support for huge pages.   
 
 %We only use five applications that \NM{} has significantly better performance than other allocators.
-\NM{} significantly reduces the number of remote accesses for three applications, \texttt{fluidanimate}, \texttt{pbzip2}, and \texttt{streamcluster}. Let us utilize \texttt{fluidanimate} as an example, where \NM{} is running $4.3\times$ faster than \TN{} and $5.3\times$ faster than the default Linux allocator. Fig.~\ref{fig:remoteAccess} shows that the number of remote accesses for \TN{} and the default allocator is $3.5\times$ and $3.6\times$ more than \NM{}. However, there is no much difference in the number of remote accesses for \texttt{dedup} and \texttt{swaptions} compared with some allocators. Based on our investigation, \NM{} is running faster than others due to the reduction of TLB misses instead. 
+\NM{} significantly reduces the number of remote accesses for three applications, \texttt{fluidanimate}, \texttt{pbzip2}, and \texttt{streamcluster}. Let us utilize \texttt{fluidanimate} as an example, where \NM{} is running $4.3\times$ faster than \TN{} and $5.3\times$ faster than the default Linux allocator. Figure~\ref{fig:remoteAccess} shows that the number of remote accesses for \TN{} and the default allocator is $3.5\times$ and $3.6\times$ more than \NM{}. However, there is no much difference in the number of remote accesses for \texttt{dedup} and \texttt{swaptions} compared with some allocators. Based on our investigation, \NM{} is running faster than others due to the reduction of TLB misses instead. 
 
 \NM{}'s big reduction of remote accesses can be attributed to the following factors: its thread binding avoids unnecessary remote accesses; its metadata is placed on the local node, based on the binding design; its origin-aware memory allocation ensures locality of memory allocations.
 For TLB misses, \NM{} is orders of magnitude lower than other allocators (except TCMalloc) for \texttt{pbzip2}. Especially, the default allocator and jemalloc have $49\times$ or $57\times$ more TLB misses. Interestingly, the performance difference of \texttt{pbzip2} is even smaller than \texttt{fluidanimate}, given the large difference in TLB misses. Based on our understanding, \texttt{pbzip2} is an IO-bound application so that the computation difference does not have a large impact on its overall performance. 
@@ -141,7 +141,7 @@ For TLB misses, \NM{} is orders of magnitude lower than other allocators (except
 
 \input{memorytable}
 
-We also conduct such experiments on the OpenMP/MPI applications as shown in Fig.~\ref{fig:remoteAccess2}. Here we only show applications that have significant performance improvement. Among three applications, \NM{} greatly reduces the remote accesses of LAMMPS and AMG. For Quicksilver, the number of remote accesses and TLB misses for \NM{} is comparable to some good allocators, resulting in relatively good performance. Compared with the second-best allocator (mimalloc), the remote accesses of \NM{} are
+We also conduct such experiments on the OpenMP/MPI applications as shown in Figure~\ref{fig:remoteAccess2}. Here we only show applications that have significant performance improvement. Among three applications, \NM{} greatly reduces the remote accesses of LAMMPS and AMG. For Quicksilver, the number of remote accesses and TLB misses for \NM{} is comparable to some good allocators, resulting in relatively good performance. Compared with the second-best allocator (mimalloc), the remote accesses of \NM{} are
 reduced by $12.9\times$ and the TLB misses are reduced by $1.02\times$ on average. The data for other allocators are similar
 or even worse. This further confirms that \NM{} can reduce the number of remote accesses as well as TLB misses, thus improving the performance.
 Overall, \NM{} either has fewer remote accesses or fewer TLB misses, which are the reasons that \NM{} has better performance than other allocators on these applications. 
@@ -216,9 +216,13 @@ We also measure the memory consumption of these allocators, as shown in Table~\r
 Overall, the default Linux allocator has the smallest memory consumption, and TBB is the second-best one. \NM{}'s total memory consumption is around 12\% more than that of the default Linux allocator, but it is similar to TCMalloc and better than jemalloc and mimalloc. It is far better than scalloc when THP is enabled. When only considering applications with a large footprint, over 500MB, \NM{} introduces 10\% memory overhead on average, which is also comparable to TCMalloc.  
 %Scalloc is the worst one in terms of memory consumption, which consumes around  $8.3\times$ more memory that that of TBB.  
 
-\NM{}'s higher memory consumption is mainly caused by its use of huge pages. When enabling transparent huge pages, an application will use 2MB of physical memory even if it only allocates a small object (e.g., 8 bytes). As shown in the column of ``w/o THP'' of Table~\ref{tab:memory_consumption}, when the transparent huge page support is disabled, \NM{}'s memory overhead is actually comparable to Glibc and Intel TBB, where the total memory consumption is decreased from 15210 MB to 13364 MB. That is, \NM{} imposes a similar memory overhead when not using huge pages. We expect that \NM{}'s memory consumption can be further reduced by utilizing some complicated mechanisms proposed by TEMERAIRE~\cite{TEMERAIRE} (TCMalloc).   
+\NM{}'s higher memory consumption is mainly caused by its use of huge pages. When enabling transparent huge pages, an application will use 2MB of physical memory even if it uses only a small portion of it.
+% allocates a small object (e.g., 8 bytes). 
+As shown in the column of ``w/o THP'' of Table~\ref{tab:memory_consumption}, when the transparent huge page support is disabled, \NM{}'s memory overhead is actually comparable to Glibc and Intel TBB, where the total memory consumption is decreased from 15210 MB to 13364 MB. That is, \NM{} imposes a similar memory overhead when not using huge pages. We expect that \NM{}'s memory consumption can be further reduced by utilizing some complicated mechanisms proposed by TEMERAIRE~\cite{TEMERAIRE} (TCMalloc).   
 
-The memory consumption of \NM{} is almost $7\times$ lower than Scalloc with huge page support. Similarly, Scalloc allocates a big region of virtual memory from the underlying OS initially, which will be backed by huge pages physically. \NM{}'s memory consumption is much lower due to its ``incremental sharing'' mechanism. Comparing to Scalloc, \NM{} makes all threads (with different size classes) in the same node share the same huge page, as described in Section~\ref{sec:hugepages}, which effectively reduces its memory consumption. 
+The memory consumption of \NM{} is almost $7\times$ lower than Scalloc with huge page support. Similarly, Scalloc allocates a big region of virtual memory from the underlying OS initially, which will be backed by huge pages physically. \NM{}'s memory consumption is much lower due to its ``incremental sharing'' mechanism. Comparing to Scalloc, \NM{} makes all threads (with different size classes) in the same node share the same 
+% huge 
+page, as described in Section~\ref{sec:hugepages}, which effectively reduces its memory consumption. 
 %In total, Scalloc utilizes $7\times$ more memory when transparent huge page support is enabled.  
 
 %We further confirmed the memory consumption when transparent huge page support is disabled, which can be seen in Table~\ref{tab:memory_consumption}. In this case, \NM{}'s total memory overhead is comparable to the default Linux allocator. Other allocators will not be affected much by transparent huge pages, since they typically obtain a small chunk from the OS each time, less than the size of a huge page (2MB), then the OS will not allocate physical pages from huge pages by default. Therefore, we believe that \NM{}'s memory consumption is acceptable. 
@@ -287,9 +291,9 @@ For instance, raytrace has no performance difference when running with 16 thread
 %Passive false sharing is introduced upon deallocations, where a freed object can be utilized by another thread. In contrast, active false sharing is introduced during the initial allocations, where multiple continuous objects sharing the same cache line are allocated to different threads. The synthetic applications have a better scalability by design than other evaluated applications in the last section. 
 %Since other allocators cannot specify the configuration, we only evaluate the scalability with different number of threads. 
 In the evaluation, we maximize the number of threads on each node for \NM{}. For instance, 32 threads will use 2 nodes, as each node has 16 cores. For other allocators, we only specify the number of threads, and it is up to the OS to determine the scheduling. 
-%The corresponding data is shown in Fig.\ref{sythentic-scalability}. All data are normalized to the data of one thread of the Linux's default allocator, where the higher is better.
+%The corresponding data is shown in Figure~\ref{sythentic-scalability}. All data are normalized to the data of one thread of the Linux's default allocator, where the higher is better.
  
-Fig.\ref{sythentic-scalability} illustrates different allocators' performance speedup with the increasing number of threads. All data is normalized to the runtime of Linux's default allocator under one thread. Overall, \NM{} has the best performance when the number of threads is 128. Its average speedup is $88\times$, compared to Linux's allocator with one thread, while the second-best allocator -- \texttt{mimalloc} -- has $75\times$ speedup. In contrast, the default Linux allocator only has the speedup of $49\times$. That is, \NM{} has the best scalability compared to other allocators.
+Figure~\ref{sythentic-scalability} illustrates different allocators' performance speedup with the increasing number of threads. All data is normalized to the runtime of Linux's default allocator under one thread. Overall, \NM{} has the best performance when the number of threads is 128. Its average speedup is $88\times$, compared to Linux's allocator with one thread, while the second-best allocator -- \texttt{mimalloc} -- has $75\times$ speedup. In contrast, the default Linux allocator only has the speedup of $49\times$. That is, \NM{} has the best scalability compared to other allocators.
 %When computing the speedup using the data of one thread of each allocator, \NM{}'s average speedup is $65\times$, while the second-best one is $54\times$. 
 
 Among these applications, both \texttt{cache-scratch} and \texttt{cache-thrash} test false sharing issues that can be introduced by allocators, where multiple threads access different objects in the same cache line. For both applications, \NM{} has similar scalability compared to other allocators up to 64 threads. But when it comes to 128 threads, \NM{} outperforms all other allocators. According to our investigation, other allocators suffer from false sharing issues while \NM{} avoids the problem and thus has better performance.
@@ -317,7 +321,7 @@ Among these applications, \texttt{cache-scratch} tests passive false sharing, an
 \end{comment} 
  %\texttt{larson} is to simulate a multithreaded server that could respond to requests from different clients. \NM{} is around 16\% faster than the second-best allocator--TCMalloc.   \texttt{threadtest} is an application that performs a large number of allocations and deallocations within a specified number of threads. \NM{} is $2.6\times$ faster than the second-best one (jemalloc), when there are 128 threads.
  %Each thread will receive a random number of objects in the beginning, perform a random number of allocation and deallocations to simulate the handler for processing requests, and then pass objects to the next thread. We test \texttt{larson} for 10 seconds with 1,000 objects for 10,000 iterations, where each allocation is between 7 bytes and 2048 bytes. 
- %As shown in Fig.~\ref{sythentic-scalability},  
+ %As shown in Figure~\ref{sythentic-scalability},  
 
 
 
@@ -373,29 +377,29 @@ This section further confirms \NM{}'s multiple design choices.
 % \end{figure*}
 
 \NM{}'s memory management is based on binding, including thread binding and memory binding. We believe such bindings benefit the performance and open up other design opportunities, such as origin-aware memory management, metadata allocation and incremental sharing. The combination of all design choices makes \NM{} a faster and more efficient allocator. Therefore, we cannot evaluate the impact of thread binding by directly disabling it on \NM{} since other designs depend on it. To overcome this problem, we implement a thread binding library that allows other allocators to enable binding.
-Fig.\ref{binding-pthread-scalibity}(a) shows the impact of thread binding on two allocators, Glibc and TCMalloc.
-% Fig.\ref{binding-pthread-scalibity}(a) shows the performance difference without thread binding for two allocators, Glibc and TCMalloc.
+Figure~\ref{binding-pthread-scalibity}(a) shows the impact of thread binding on two allocators, Glibc and TCMalloc.
+% Figure~\ref{binding-pthread-scalibity}(a) shows the performance difference without thread binding for two allocators, Glibc and TCMalloc.
 The results are normalized to the data with thread binding of each allocator, respectively, so we omit the ones with thread binding. Thus, this figure can be considered to show how much slower it would run without thread binding.
 % We cannot evaluate \NM{} directly, since its mechanisms are tightened to thread binding, such as incremental sharing, origin-aware memory management and metadata allocation. 
-Here we use the node-interleaved binding. As shown in Fig.\ref{binding-pthread-scalibity}(a), the thread binding improves the performance significantly for some applications. For instance, \texttt{fluidanimate} runs around $4.45\times$ faster on Glibc and $3.66\times$ faster on TCMalloc with the node-balanced thread binding. Similarly, \texttt{streamcluster} runs around 20\% and 30\% faster than the corresponding one without the binding. 
+Here we use the node-interleaved binding. As shown in Figure~\ref{binding-pthread-scalibity}(a), the thread binding improves the performance significantly for some applications. For instance, \texttt{fluidanimate} runs around $4.45\times$ faster on Glibc and $3.66\times$ faster on TCMalloc with the node-balanced thread binding. Similarly, \texttt{streamcluster} runs around 20\% and 30\% faster than the corresponding one without the binding. 
 We further use \texttt{perf}~\cite{perfweb} to analyze the reasons for the significant performance improvement of these two applications. The results confirm that remote accesses are significantly reduced with thread binding, mainly due to the elimination of thread migration. Interestingly, the cache miss rate also decreases with thread binding. Overall, thread binding will benefit the performance of most applications without hurting others,
 % This clearly indicates that the thread binding will benefit the performance overall
 which should be included in the memory allocator by default. 
 
 % In particular, threads are bound to different nodes in a round-bin way, called node-balanced binding, which is the same as \NM{}.
 
-We also compare two types of thread binding: node-interleaved or node-saturate thread binding. In node-saturate binding, we bind the maximum possible number of threads (same as the number of cores) to a node and then switch to the next node. As shown in Fig.\ref{binding-pthread-scalibity}(b), the node-interleaved thread binding is almost always better than node-saturate thread binding, except for \texttt{vips}. On average, node-interleaved binding is around 19\% faster than node-saturate one for these evaluated applications. This indicates that people should use node-interleaved binding, if they would like to employ all hardware cores. However, if they only want to use partial cores, then the node-saturate binding could be a better choice. \NM{} allows users to adjust the binding option based on their needs.
+We also compare two types of thread binding: node-interleaved or node-saturate thread binding. In node-saturate binding, we bind the maximum possible number of threads (same as the number of cores) to a node and then switch to the next node. As shown in Figure~\ref{binding-pthread-scalibity}(b), the node-interleaved thread binding is almost always better than node-saturate thread binding, except for \texttt{vips}. On average, node-interleaved binding is around 19\% faster than node-saturate one for these evaluated applications. This indicates that people should use node-interleaved binding, if they would like to employ all hardware cores. However, if they only want to use partial cores, then the node-saturate binding could be a better choice. \NM{} allows users to adjust the binding option based on their needs.
 
 % , proving the effectiveness of Node-Balanced thread binding.
 
 \subsubsection{Impact of Origin-aware Deallocation}
 
-As discussed in \ref{sec:origin}, \NM{} adopts an origin-aware memory management to ensure the locality of memory allocations and deallocations. Some NUMA-aware allocators take locality into consideration during allocation, but neglect to handle the remote deallocation, resulting in remote accesses when reusing the memory. Instead, \NM{} proposes origin-aware deallocation which guarantees that a freed object will always return to its original node's heap. We further verified the effect of this design and the results are shown in Fig.~\ref{fig:origin}, where the data is normalized to the runtime with origin-aware deallocation. According to the Fig.~\ref{fig:origin}, all evaluated applications benefit from origin-aware deallocation and applications that have more remote deallocations, such as canneal, streamcluster and vips, achieve significant performance improvements. Overall, \NM{} runs 3.8\% slower if we don't consider the origin of freed objects.
+As discussed in \ref{sec:origin}, \NM{} adopts an origin-aware memory management to ensure the locality of memory allocations and deallocations. Some NUMA-aware allocators take locality into consideration during allocation, but neglect to handle the remote deallocation, resulting in remote accesses when reusing the memory. Instead, \NM{} proposes origin-aware deallocation which guarantees that a freed object will always return to its original node's heap. We further verified the effect of this design and the results are shown in Figure~\ref{fig:origin}, where the data is normalized to the runtime with origin-aware deallocation. According to the Figure~\ref{fig:origin}, all evaluated applications benefit from origin-aware deallocation and applications that have more remote deallocations such as canneal achieve significant performance improvements. Overall, \NM{} runs 2.9\% slower if we don't consider the origin of freed objects.
 
 
 \subsubsection{Impact of Transparent Huge Pages}
 
-As discussed in \ref{sec:hugepages}, it's beneficial to embrace the transparent huge page support in modern systems. We evaluate the performance impact of transparent huge pages. The results are shown in Fig.~\ref{fig:hugepage}. When integrating with transparent huge pages, \NM{} achieves significantly better performance for \texttt{vips}, where it is running 16\% faster. On average, transparent huge pages improve the performance by about 2.62\%. There are no applications that run slower with huge pages. This clearly indicates that it is beneficial to enable transparent huge pages for the NUMA architecture, especially when \NM{} is used. 
+As discussed in \ref{sec:hugepages}, it's beneficial to embrace the transparent huge page support in modern systems. We evaluate the performance impact of transparent huge pages. The results are shown in Figure~\ref{fig:hugepage}. When integrating with transparent huge pages, \NM{} achieves significantly better performance for \texttt{vips}, where it is running 16\% faster. On average, transparent huge pages improve the performance by about 2.62\%. There are no applications that run slower with huge pages. This clearly indicates that it is beneficial to enable transparent huge pages for the NUMA architecture, especially when \NM{} is used. 
 Although \NM{} may increase its memory overhead from 2\% to 10\% when using huge pages, as shown in Table~\ref{tab:memory_consumption}, the memory overhead is still acceptable, given the hardware trend of increasing memory capacity.  
 
 
@@ -404,7 +408,7 @@ Although \NM{} may increase its memory overhead from 2\% to 10\% when using huge
 \subsubsection{Impact of Interleaved Heap} 
 \label{sec:interleavedheap}
 
-We also evaluate the potential benefit of the interleaved heap. The performance data is shown in Fig.\ref{fig:interleavedheap}. 
+We also evaluate the potential benefit of the interleaved heap. The performance data is shown in Figure~\ref{fig:interleavedheap}. 
 % Note that we have evaluated all PARSEC applications listed in Section~\ref{sec:performance}.
 Based on the figure, we have the following conclusion: the interleaved heap will benefit (or at least has no harmful impact on) the performance for most applications. In particular, it improves the performance significantly on \texttt{fluidanimate} and \texttt{streamcluster}.  However, applications having a large portion of time spent in the serial phase, such as \texttt{canneal} and \texttt{raytrace}, may hurt the performance with the interleaved heap support. These two applications share the same property that they have a larger portion of the first serial phase. With the interleaved heap, \NM{} allocates the memory from different nodes interleavedly for the serial phase, instead of from the local node (based on the default first-touch policy). That is, some private objects allocated in a remote node may introduce unnecessary performance overhead due to remote accesses. Currently, we do not know why swaptions has a large negative performance impact when the interleaved heap is employed, whose performance can change dramatically when adding one meaningless code line (declaration and assignment of a \texttt{volatile} variable) or changing the compilation flags. We will keep investigating this. 
 %Further, upon each allocation, \NM{} checks the callstack to confirm whether an allocation is from a potentially shared heap, which also introduces some overhead. Therefore, the interleaved heap will be enabled by default, unless programmers know that it will not benefit the performance.
