--- a/ASPLOS2023/intro.tex
+++ b/ASPLOS2023/intro.tex
@@ -9,7 +9,7 @@ In order to reduce remote accesses, some NUMA-aware allocators~\cite{tcmallocnum
 
 %These designs are also borrowed by general-purpose allocators for their NUMA support, such as TCMalloc~\cite{tcmalloc2} and mimalloc~\cite{mimalloc}. 
 %\todo{Similarly, TCMalloc designs a page allocator for each NUMA node so that a thread is allocating the physical memory from the page node.}
-mimalloc~\cite{mimalloc}'s design alleviates this problem, although its initial target is not to solve the locality issue of NUMA architecture. It proposes per-page (e.g., 64K) free lists that are typically allocated/used by a single thread at a time, and all objects from the same page (even deallocated by other threads) will be returned to the same per-page free list so that they can be re-used by the same thread later. 
+mimalloc~\cite{mimalloc}'s design alleviates this problem, although its initial target is not to solve the locality issue of NUMA architecture. It proposes per-page (e.g., 64K) freelists that are typically allocated/used by a single thread at a time, and all objects from the same page (even deallocated by other threads) will be returned to the same per-page freelist so that they can be re-used by the same thread later. 
 %, which \todo{not clear, change to: On the other hand, mimalloc~\cite{mimalloc} manages freelists from page granularity and each page has an extra thread-free list that is utilized to handle deallocation from remote threads, which could alleviate the above-mentioned problem.}
 
 
@@ -19,7 +19,7 @@ However, \textit{none of existing allocators achieves the full locality of memor
 First, \NM{} proposes a \textbf{binding-based memory management} that also binds threads to physical nodes, in addition to memory binding, with the following benefits: (1) the bindings enable \NM{} to obtain the origin (or the physical node) of memory and threads with few instructions inside the user space, without the need of invoking expensive system calls (around  $10,000$ cycles for getting the node of the memory), enabling more advanced memory management as discussed below; %Therefore, it is infeasible to perform more advanced memory management, as the performance benefits of reducing remote accesses will be canceled out by the cost of getting the origin information via system calls.
 (2) thread binding eliminates remote accesses caused by the above-mentioned thread migrations, but it does not exclude OS-based scheduling. \NM{} only binds a thread to a specific node, and also allows users to specific the binding explicitly; and (3) thread binding reduces the locality issues of heap metadata, such as the mapping of identifying the size of each object, which could be always allocated from the same physical node. Note that while past systems~\cite{li2013numa, XuNuma, Lepers:2015:TMP:2813767.2813788} have exploited thread binding to improve the performance of NUMA applications, \NM{} is the first allocator that implements and utilizes both memory and threading binding inside the memory allocator. 
 
-Second, \NM{} ensures the full locality of memory allocations with its \textbf{origin-aware memory management}, based on memory and thread binding. In particular, \textit{\NM{} ensures that each thread will always allocate the memory from the same physical node that the thread is running on}. Since \NM{} binds the virtual memory to physical nodes explicitly and maintains the mapping relationship internally, it could always infer the physical node (or origin) of each object. During deallocations, \NM{} guarantees that a freed object will be always placed into a freelist with the same origin as the allocating thread. That is, an object is returned to the deallocating thread \textit{only if} the object is originated from the same node as the current thread; otherwise, it will be returned to its original node (e.g., per-node free list). Because of this reason, \NM{} can ensure that a thread will always allocate objects originating from the same node, as per-thread and per-node free lists only hold local objects. In addition, \NM{} ensures that all heap metadata exists on the same local node, such as the mapping of tracking the size of objects.
+Second, \NM{} ensures the full locality of memory allocations with its \textbf{origin-aware memory management}, based on memory and thread binding. In particular, \textit{\NM{} ensures that each thread will always allocate the memory from the same physical node that the thread is running on}. Since \NM{} binds the virtual memory to physical nodes explicitly and maintains the mapping relationship internally, it could always infer the physical node (or origin) of each object. During deallocations, \NM{} guarantees that a freed object will be always placed into a freelist with the same origin as the allocating thread. That is, an object is returned to the deallocating thread (per-thread freelist) \textit{only if} the object is originated from the same node as the current thread; otherwise, it will be returned to its original node (per-node freelist). Because of this reason, \NM{} can ensure that a thread will always allocate objects originating from the same node, as per-thread and per-node freelists only hold local objects. In addition, \NM{} ensures that all heap metadata exists on the same local node, such as the mapping of tracking the size of objects.
 
 
 
@@ -33,11 +33,13 @@ Second, \NM{} ensures the full locality of memory allocations with its \textbf{o
 
 % simply return freed objects to their original free lists, which is easier to achieve. \NEW{mimalloc considers the locality of deallocation, but it's done from thread level, which makes the threads running on the same node complete for the lock.}
 
-Last but not least, \NM{} proposes a new \textbf{incremental sharing} mechanism to take advantage of the Transparent Huge Pages (THP) of modern hardware~\cite{hugepage}. Huge pages are expected to significantly reduce Translation Lookaside Buffer (TLB) misses, as each page table entry covers a larger range of virtual addresses (e.g., 2MB instead of 4KB). However, most existing allocators~\cite{dlmalloc, Hoard, Scalloc} do not support huge pages, or even require to disable huge pages~\cite{scallochugepage}.  Allocators supporting huge pages have their own shortcomings: LLAMA~\cite{LLAMA} allocates objects from huge pages based on the liveness of objects, but requires expensive analysis and profiling; TEMERAIRE~\cite{TEMERAIRE} does not share huge pages between different threads, since mistakenly letting two remote threads share the same huge page may impose some performance degradation.  
-In contrast, \NM{} allows different threads running on the same node share the same huge page, based on explicit binding of threads. 
+Last but not least, \NM{} proposes a new \textbf{incremental sharing} mechanism to take advantage of the Transparent Huge Pages (THP) of modern hardware~\cite{hugepage}. Huge pages are expected to significantly reduce Translation Lookaside Buffer (TLB) misses, as each page table entry covers a larger range of virtual addresses (e.g., 2MB instead of 4KB). However, most existing allocators~\cite{dlmalloc, Hoard, Scalloc} do not support huge pages, or even require to disable huge pages~\cite{scallochugepage}.  
+Allocators supporting huge pages have their own shortcomings: LLAMA~\cite{LLAMA} allocates objects from huge pages based on the liveness of objects, but requires expensive analysis and profiling; TEMERAIRE~\cite{TEMERAIRE} does not share huge pages between different threads, since mistakenly letting two remote threads share the same huge page may impose some performance degradation.
+In contrast, \NM{} includes explicit thread binding which makes it possible to share the pages between threads running on the same node. We call it ``incremental sharing'' as each thread only fetches the amount of memory it needs from currently available page at a time, instead of the entire page.
+% In contrast, \NM{} allows different threads running on the same node share the same huge page, based on explicit binding of threads. 
 %with different size classes running on the same physical node, 
 %Internally, \NM{} always prefers to utilize huge pages: it not only allows multiple threads to share the same huge page, but also 
-\NM{} also shares the same huge page between different size classes of different threads incrementally: each thread will acquire either 32KB or an object (if the object is larger than 32KB) each time from the current huge page, instead of one whole huge page. Because it allows different threads and different size classes to share the same huge page, it practically minimizes the internal fragmentation of using huge pages.  
+% \NM{} also shares the same huge page between different size classes of different threads incrementally: each thread will acquire either 32KB or an object (if the object is larger than 32KB) each time from the current huge page, instead of one whole huge page. Because it allows different threads and different size classes to share the same huge page, it practically minimizes the internal fragmentation of using huge pages.  
 %\NM{} supports the \textbf{incremental sharing} that each thread will get few objects at a time, instead of one whole huge page, in order to reduce memory fragmentation. 
 %As it is very expensive to track whether a huge page with small objects is completely deallocated, the proposed work will use different huge pages for big and small objects separately, which allows us to only track the full status of huge pages for big objects. 
 % To make the OS use huge pages inherently, \NM{} maps a large region of memory (larger than the size of a huge page) for each node initially. 
