--- a/ASPLOS2023/numalloc.tex
+++ b/ASPLOS2023/numalloc.tex
@@ -32,12 +32,12 @@
 %\usepackage{fancyvrb}
 \usepackage[keeplastbox]{flushend}
 
-\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
-    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+% \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
+%     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 % Ensure letter paper
-\pdfpagewidth=8.5in
-\pdfpageheight=11in
+% \pdfpagewidth=8.5in
+% \pdfpageheight=11in
 
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
